fixed grid gap not working on mobile

--- a/frontend/src/App.sass
+++ b/frontend/src/App.sass
@@ -39,3 +39,4 @@ a
     flex-direction: column
     align-items: center
     gap: 3rem
+    grid-gap: 3rem
